--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Hello React</title>
+
+    <style>
+        button {
+            width: 100px;
+            height: 30px;
+            border-radius: 4px;
+            margin: 50px;
+        }
+
+        .on {
+            color: #666;
+            background-color: #ccc;
+        }
+
+        .off {
+            color: #888;
+            background-color: white;
+        }
+    </style>
 </head>
+
 <body>
     <div id="container"> </div>
 
@@ -13,4 +34,5 @@
 
     <script type="text/babel" src="index.js"></script>
 </body>
+
 </html>
