--- a/index.html
+++ b/index.html
@@ -3,36 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hello React</title>
-
-    <style>
-        button {
-            width: 100px;
-            height: 30px;
-            border-radius: 4px;
-            margin: 50px;
-        }
-
-        .on {
-            color: #666;
-            background-color: #ccc;
-        }
-
-        .off {
-            color: #888;
-            background-color: white;
-        }
-    </style>
+    <title>Webpack в React</title>
 </head>
 
 <body>
     <div id="container"> </div>
 
-    <script src="https://unpkg.com/react@15/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.min.js"></script>
-
-    <script type="text/babel" src="index.js"></script>
+    <script src="public/bundle.js"></script>
 </body>
 
 </html>
