--- a/index3.html
+++ b/index3.html
@@ -11,8 +11,8 @@
 
     <script src="https://unpkg.com/react@15/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+    <script src="https://unpkg.com/react-router@3.0.0/umd/ReactRouter.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.min.js"></script>
-
     <script type="text/babel" src="script3.js"></script>
 </body>
 </html>
